Fix excess spacing above streamer headings.

--- a/components/_pages/stream-team/_stream-team.scss
+++ b/components/_pages/stream-team/_stream-team.scss
@@ -40,6 +40,9 @@
 	&__stream {
 		margin-bottom: 3rem;
 	}
+	&__stream-heading {
+		margin-top: 0;
+	}
 	&__twitch-container,
 	&__schedule-container {
 		position: relative;
